# chess-sensei

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  ollama.rs  stockfish.rs
src/components/: AIOpponentMode.tsx  BoardControls.tsx  ChatPanel.tsx  ChessBoard.tsx  ComputerOpponentPanel.tsx  EvaluationBar.tsx  GameInfo.tsx  Layout.tsx  ModeSelector.tsx  MoveHistory.tsx  OpeningMode.tsx  PositionLoader.tsx  PuzzleMode.tsx
src/hooks/: useComputerOpponent.ts  useStockfish.ts
src/store/: useGameStore.ts
src/styles/: index.css
src/types/: index.ts
